test/types/enum/bradc/dispatch/enumarray.good
enumarray.chpl:22: error: unresolved call 'foo(color, color)'
enumarray.chpl:12: note: candidates are: foo(x: int(32), y: int(32))
enumarray.chpl:17: note:                 foo(x: int(64), y: int(64))
